body-overflow-fix

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+html {
+  overflow-x: hidden;
+}
 .homepage-header-container {
   min-height: 650px;
   background-image: url(../images/headerBGNotes.webp);
